<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeMainActivity"
    tools:showIn="@layout/activity_home_main">

    <Button
        android:id="@+id/btnViewWords"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_words"
        android:onClick="viewWordsClick"/>

    <Button
        android:id="@+id/btnSearchWords"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnViewWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search_words"
        android:onClick="searchWordsClick"/>

    <Button
        android:id="@+id/btnAddWord"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnSearchWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_word"
        android:onClick="addWordClick"/>

</RelativeLayout>